// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdeHTTPErrors renders when no props are defined 1`] = `
[
  <IdeHTTPErrors
    description="CHANGE ME"
    title="CHANGE ME"
  />,
]
`;

exports[`IdeHTTPErrors renders when the background prop is defined as 403 1`] = `
[
  <IdeHTTPErrors
    background={403}
    description="CHANGE ME"
    title="CHANGE ME"
  />,
]
`;

exports[`IdeHTTPErrors renders when the background prop is defined as 404 1`] = `
[
  <IdeHTTPErrors
    background={404}
    description="CHANGE ME"
    title="CHANGE ME"
  />,
]
`;

exports[`IdeHTTPErrors renders when the description prop is defined 1`] = `
[
  <IdeHTTPErrors
    description="description"
    title="CHANGE ME"
  />,
]
`;

exports[`IdeHTTPErrors renders when the details prop is defined 1`] = `
[
  <IdeHTTPErrors
    description="CHANGE ME"
    details="details"
    title="CHANGE ME"
  />,
]
`;

exports[`IdeHTTPErrors renders when the links prop is defined as an array 1`] = `
[
  <IdeHTTPErrors
    description="CHANGE ME"
    links={
      [
        {
          "text": "text1",
          "url": "url1",
        },
        {
          "text": "text2",
          "url": "url2",
        },
      ]
    }
    title="CHANGE ME"
  />,
]
`;

exports[`IdeHTTPErrors renders when the links prop is defined as an object 1`] = `
[
  <IdeHTTPErrors
    description="CHANGE ME"
    links={
      {
        "text": "text",
        "url": "url",
      }
    }
    title="CHANGE ME"
  />,
]
`;

exports[`IdeHTTPErrors renders when the title prop is defined 1`] = `
[
  <IdeHTTPErrors
    description="CHANGE ME"
    title="title"
  />,
]
`;
